--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "nodemon src/app.ts",
-    "build": "tsc",
+    "dev": "ts-node-dev --files --respawn --inspect -r tsconfig-paths/register src/app.ts",
+    "build": "tsc && tsc-alias",
     "start": "node dist/app.js"
   },
   "dependencies": {
@@ -28,8 +28,9 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
-    "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "tsc-alias": "^1.8.10",
     "typescript": "^5.6.3"
   }
 }
