--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
 ENV_MODE=dev
-PORT=8080
-TELEGRAM_BOT_TOKEN=test
-MINIAPP_URL=test
-DOMAIN=test
-SERVER_URL=http://localhost:8000
+CLIENT_HOST=http://localhost:3000
+API_PORT=3030
+WS_PORT=8030
+WS_PRAGMATIC=wss://dga.pragmaticplaylive.net/ws
