--- a/package.json
+++ b/package.json
@@ -12,16 +12,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "grammy": "^1.31.1",
-    "winston": "^3.16.0",
-    "zod": "^3.23.8"
+    "ws": "^8.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/http-status-codes": "^1.2.0",
-    "@types/node": "^22.8.1",
+    "@types/node": "^22.17.0",
+    "@types/ws": "^8.12.0",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "eslint": "^8.41.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
